--- a/core/templates/core/dashboard/outlet_dashboard.html
+++ b/core/templates/core/dashboard/outlet_dashboard.html
@@ -153,7 +153,7 @@
                     <div id="paymentStatus" class="hidden"></div>
                     <button type="submit" id="processPaymentBtn"
                             class="w-full bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 transition-colors">
-                        Process Payment
+                        <i class="fas fa-wifi mr-2"></i> Scan NFC Card & Process Payment
                     </button>
                 </form>
             </div>
