--- a/core/templates/core/dashboard/admin_dashboard.html
+++ b/core/templates/core/dashboard/admin_dashboard.html
@@ -191,3 +191,7 @@
     </div>
 </div>
 {% endblock %}
+
+{% block extra_js %}
+<script src="{% static 'js/admin-analytics.js' %}"></script>
+{% endblock %}
