--- a/core/templates/core/card_management.html
+++ b/core/templates/core/card_management.html
@@ -238,7 +238,7 @@
                 operationStatus.className = 'rounded-lg p-4 mb-6 bg-yellow-100 text-yellow-800';
                 operationStatus.innerHTML = `
                     <div class="flex flex-col space-y-2">
-                        <div><i class="fas fa-exclamation-triangle mr-2"></i> <strong>NFC is not supported in this browser.</strong> Manual card ID entry will be used instead.</div>
+                        <div><i class="fas fa-exclamation-triangle mr-2"></i> <strong>NFC is not supported in this browser.</strong> This system requires NFC to function.</div>
                         <div class="text-sm">
                             <strong>Requirements for NFC:</strong>
                             <ul class="list-disc ml-5 mt-1">
@@ -270,7 +270,7 @@
                 nfcPermissionBtn.addEventListener('click', async function() {
                     try {
                         const nfcHandler = new NFCHandler();
-                        const permissionGranted = await nfcHandler.requestNFCPermission();
+                        const permissionGranted = await nfcHandler.requestPermission();
                         
                         if (permissionGranted) {
                             operationStatus.className = 'rounded-lg p-4 mb-6 bg-green-100 text-green-800';
